--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discovery Kids</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/bxSlider.js"></script>
