--- a/detail_logotraining.html
+++ b/detail_logotraining.html
@@ -254,7 +254,7 @@
                 </tr>
                 <tr>
                     <th scope="row">주의사항</th>
-                    <td>원단의 특성상 이염의 우려가 있으니 반드시 단독세탁 하십시오.ㄴ</td>
+                    <td>원단의 특성상 이염의 우려가 있으니 반드시 단독세탁 하십시오.</td>
                 </tr>
             </tbody>
         </table>
