--- a/detail_air_jacket.html
+++ b/detail_air_jacket.html
@@ -227,8 +227,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="에어핏 하이로프트 후드 자켓">
-            <img src="http://via.placeholder.com/150" alt="에어핏 하이로프트 후드 자켓">
+            <img src="https://via.placeholder.com/150" alt="에어핏 하이로프트 후드 자켓">
+            <img src="https://via.placeholder.com/150" alt="에어핏 하이로프트 후드 자켓">
         </div>
 
         <ul class="tabMenu floatCancel">
