--- a/detail_air_mtm.html
+++ b/detail_air_mtm.html
@@ -226,8 +226,8 @@
         <div class="style page">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="에어핏 하이로프트 맨투맨 style01">
-            <img src="http://via.placeholder.com/150" alt="에어핏 하이로프트 맨투맨 style02">
+            <img src="https://via.placeholder.com/150" alt="에어핏 하이로프트 맨투맨 style01">
+            <img src="https://via.placeholder.com/150" alt="에어핏 하이로프트 맨투맨 style02">
         </div>
 
         <ul class="tabMenu">
