--- a/detail_inoblock.html
+++ b/detail_inoblock.html
@@ -224,8 +224,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="이노블럭바람막이 style1">
-            <img src="http://via.placeholder.com/150" alt="이노블럭바람막이 style2">
+            <img src="https://via.placeholder.com/150" alt="이노블럭바람막이 style1">
+            <img src="https://via.placeholder.com/150" alt="이노블럭바람막이 style2">
         </div>
 
         <ul class="tabMenu">
