--- a/detail_reflects.html
+++ b/detail_reflects.html
@@ -227,8 +227,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 패밀리 빅로고 리플렉티브 반팔티 style1">
-            <img src="http://via.placeholder.com/150" alt="키즈 패밀리 빅로고 리플렉티브 반팔티 style2">
+            <img src="https://via.placeholder.com/150" alt="키즈 패밀리 빅로고 리플렉티브 반팔티 style1">
+            <img src="https://via.placeholder.com/150" alt="키즈 패밀리 빅로고 리플렉티브 반팔티 style2">
         </div>
 
         <ul class="tabMenu">
