--- a/detail_stripe_sleev.html
+++ b/detail_stripe_sleev.html
@@ -226,8 +226,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="스트라이프 슬리브리스 style1">
-            <img src="http://via.placeholder.com/150" alt="스트라이프 슬리브리스 style2">
+            <img src="https://via.placeholder.com/150" alt="스트라이프 슬리브리스 style1">
+            <img src="https://via.placeholder.com/150" alt="스트라이프 슬리브리스 style2">
         </div>
 
         <ul class="tabMenu">
