--- a/detail_backlettering.html
+++ b/detail_backlettering.html
@@ -224,8 +224,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 패밀리 백면 레터링 맨투맨 style01">
-            <img src="http://via.placeholder.com/150" alt="키즈 패밀리 백면 레터링 맨투맨 style02">
+            <img src="https://via.placeholder.com/150" alt="키즈 패밀리 백면 레터링 맨투맨 style01">
+            <img src="https://via.placeholder.com/150" alt="키즈 패밀리 백면 레터링 맨투맨 style02">
         </div>
 
         <ul class="tabMenu">
