--- a/detail_benf.html
+++ b/detail_benf.html
@@ -227,8 +227,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="패밀리 벤프 반팔티셔츠 style1">
-            <img src="http://via.placeholder.com/150" alt="패밀리 벤프 반팔티셔츠 style2">
+            <img src="https://via.placeholder.com/150" alt="패밀리 벤프 반팔티셔츠 style1">
+            <img src="https://via.placeholder.com/150" alt="패밀리 벤프 반팔티셔츠 style2">
         </div>
 
         <ul class="tabMenu">
