--- a/detail_biglogo.html
+++ b/detail_biglogo.html
@@ -228,8 +228,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 시밀러 빅로고 반팔티 style1">
-            <img src="http://via.placeholder.com/150" alt="키즈 시밀러 빅로고 반팔티 style2">
+            <img src="https://via.placeholder.com/150" alt="키즈 시밀러 빅로고 반팔티 style1">
+            <img src="https://via.placeholder.com/150" alt="키즈 시밀러 빅로고 반팔티 style2">
         </div>
 
         <ul class="tabMenu floatCancel">
