--- a/detail_fullband.html
+++ b/detail_fullband.html
@@ -227,8 +227,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 풀밴드 타슬란 반바지 style1">
-            <img src="http://via.placeholder.com/150" alt="키즈 풀밴드 타슬란 반바지 style2">
+            <img src="https://via.placeholder.com/150" alt="키즈 풀밴드 타슬란 반바지 style1">
+            <img src="https://via.placeholder.com/150" alt="키즈 풀밴드 타슬란 반바지 style2">
         </div>
 
         <ul class="tabMenu">
