--- a/detail_lettering_mtm.html
+++ b/detail_lettering_mtm.html
@@ -224,8 +224,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 소매 레터링 맨투맨 style1">
-            <img src="http://via.placeholder.com/150" alt="키즈 소매 레터링 맨투맨 style2">
+            <img src="https://via.placeholder.com/150" alt="키즈 소매 레터링 맨투맨 style1">
+            <img src="https://via.placeholder.com/150" alt="키즈 소매 레터링 맨투맨 style2">
         </div>
 
         <ul class="tabMenu">
