--- a/detail_logotech.html
+++ b/detail_logotech.html
@@ -224,8 +224,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 로고 테크후드티 style1">
-            <img src="http://via.placeholder.com/150" alt="키즈 로고 테크후드티 style2">
+            <img src="https://via.placeholder.com/150" alt="키즈 로고 테크후드티 style1">
+            <img src="https://via.placeholder.com/150" alt="키즈 로고 테크후드티 style2">
         </div>
 
         <ul class="tabMenu">
