--- a/detail_mash.html
+++ b/detail_mash.html
@@ -226,8 +226,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="후디드매쉬자켓 style1">
-            <img src="http://via.placeholder.com/150" alt="후디드매쉬자켓 style2">
+            <img src="https://via.placeholder.com/150" alt="후디드매쉬자켓 style1">
+            <img src="https://via.placeholder.com/150" alt="후디드매쉬자켓 style2">
         </div>
 
         <ul class="tabMenu">
