--- a/detail_windraser.html
+++ b/detail_windraser.html
@@ -225,8 +225,8 @@
         <div class="style page">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="윈드레이저바람막이 style1">
-            <img src="http://via.placeholder.com/150" alt="윈드레이저바람막이 style2">
+            <img src="https://via.placeholder.com/150" alt="윈드레이저바람막이 style1">
+            <img src="https://via.placeholder.com/150" alt="윈드레이저바람막이 style2">
         </div>
 
         <ul class="tabMenu">
