--- a/detail_woven_five.html
+++ b/detail_woven_five.html
@@ -226,8 +226,8 @@
         <div class="style page ">
             <!-- style -->
             <h2>Style</h2>
-            <img src="http://via.placeholder.com/150" alt="키즈 우븐5부반바지 style1">
-            <img src="http://via.placeholder.com/150" alt="키즈 우븐5부반바지 style2">
+            <img src="https://via.placeholder.com/150" alt="키즈 우븐5부반바지 style1">
+            <img src="https://via.placeholder.com/150" alt="키즈 우븐5부반바지 style2">
         </div>
 
         <ul class="tabMenu">
