--- a/etc_signup.html
+++ b/etc_signup.html
@@ -129,23 +129,23 @@
                 <ul>
                     <li>
                         <label for="userID">아이디</label>
-                        <input type="text" id="userID" title="userID">
+                        <input type="text" id="userID" title="userID" required>
                     </li>
                     <li>
                         <label for="userPW">비밀번호</label>
-                        <input type="password" id="userPW" title="userPW">
+                        <input type="password" id="userPW" title="userPW" required>
                     </li>
                     <li>
                         <label for="userPWCheck">비밀번호 확인</label>
-                        <input type="password" id="userPWCheck" title="userPWCheck">
+                        <input type="password" id="userPWCheck" title="userPWCheck" required>
                     </li>
                     <li>
                         <label for="userName">이름</label>
-                        <input type="text" id="userName" title="userName">
+                        <input type="text" id="userName" title="userName" required>
                     </li>
                     <li>
                         <label for="userPhone">휴대폰 번호</label>
-                        <select id="userPhone" title="userPhoneCarrier">
+                        <select id="userPhone" title="userPhoneCarrier" required>
                             <option>통신사 선택</option>
                             <option>SKT</option>
                             <option>KT</option>
@@ -154,11 +154,11 @@
                             <option>KT 알뜰폰</option>
                             <option>LG U+ 알뜰폰</option>
                         </select>
-                        <input type="text" title="userPhoneNumber">
+                        <input type="text" title="userPhoneNumber" required>
                     </li>
                     <li>
                         <label for="userEmail">이메일</label>
-                        <input type="email" id="userEmail" title="userEmail">
+                        <input type="email" id="userEmail" title="userEmail" required>
                     </li>
                 </ul>
             </fieldset>
